# TabPFN

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  finetune.json  finetune_regression.json  klemens_testing.md  prompttune.json  pyproject.toml  test.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pull_request.yml
examples/: example_dataloaders.py  finetune_classifier.py  finetune_regressor.py  save_and_load_model.py  tabpfn_finetune.py  tabpfn_finetune_tobias.py  tabpfn_for_binary_classification.py  tabpfn_for_multiclass_classification.py  tabpfn_for_regression.py  tabpfn_prompttune.py
examples/notebooks/: Finetuning_TabPFN.ipynb  TabPFN_Demo_Local.ipynb
scripts/: __init__.py  download_all_models.py  generate_dependencies.py  get_max_dependencies.py  get_min_dependencies.py
src/tabpfn/: __init__.py  base.py  classifier.py  config.py  constants.py  debug_versions.py  finetune_utils.py  inference.py  preprocessing.py  regressor.py  utils.py  whatever.py
src/tabpfn/misc/: _sklearn_compat.py  compile_to_onnx.py  debug_versions.py  onnx_wrapper.py
src/tabpfn/model/: bar_distribution.py  config.py  encoders.py  layer.py  loading.py  memory.py  mlp.py  multi_head_attention.py  preprocessing.py  transformer.py
src/tabpfn/model/attention/: __init__.py  full_attention.py
tabpfn/scripts/: transformer_prediction_interface.py
tests/: README.md  test_classifier_interface.py  test_consistency.py  test_download_fallbacks.py  test_export_onnx.py  test_finetuning_classifier.py  test_finetuning_regressor.py  test_ft_utils.py  test_preprocessing.py  test_prompt_tuning.py  test_regressor_interface.py  test_save_load_fitted_model.py  test_scripts.py  test_utils.py  utils.py
tests/reference_predictions/: ensemble_classifier_predictions.json  inconsistency_test_predictions.json  iris_multiclass_predictions.json  platform_metadata.json  tiny_regressor_predictions.json
tests/test_model/: test_attention.py  test_bar_distribution.py  test_encoders.py  test_seperate_train_inference.py
